# python3-harbormaster-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
